# ros2_tracing

./: README.md
doc/: design_ros_2.md
perfetto_tools/: config.txt  install_perfetto.bat  perfetto_for_linux.md  traced-probes.service  traced.service
tracetools/: CMakeLists.txt
tracetools/include/tracetools/: config.h.in  perfetto_trace.h  tp_call.h  tracetools.h
tracetools/src/: perfetto_trace.cpp  tracetools.cpp  utils.cpp
